--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,3 +35,10 @@ services:
     - ./secure_bof/xinetd:/etc/xinetd.d/secure_bof:ro
    ports:
     - "10004:4597"
+  box: 
+   build: ./box/
+   volumes:
+    - ./box/share:/home/box:ro
+    - ./box/xinetd:/etc/xinetd.d/box:ro
+   ports:
+    - "10006:4597"
